# MonopolySocket

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  main.h  readme.md
data/: color.json  spaces.json
game/: game.cpp  game.h
lua/: chance.lua  readme.md  test.lua
lua_functions/: engine_passthrough.h  lua_func.h
objects/: gameobject.cpp  gameobjects.h  player.cpp
server/: server.cpp  server.h  server.hpp  server_class.cpp
